# production-agents

./: .env.example  CONTRIBUTING.md  Makefile  README.md  example-README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  ENTERPRISE-PATTERNS.md  EVALUATION-GUIDE.md  SETUP.md  TROUBLESHOOTING.md
projects/ai_dev_team/: README.md  __init__.py
projects/ai_dev_team/agents/: __init__.py  developer.py  product_manager.py  qa_tester.py
projects/ai_dev_team/examples/: complete_feature_request.py
projects/ai_dev_team/workflows/: __init__.py  bug_fix_workflow.py  feature_workflow.py
scripts/: __init__.py  cost_calculator.py  setup.bat  setup.ps1  setup.sh  verify_setup.py
segment_1_foundations/: 01_what_is_an_agent.py  02_langgraph_basics.py  03_first_stateful_agent.py  04_crewai_intro.py  05_cost_analysis.py  README.md  __init__.py
segment_1_foundations/exercises/: design_your_workflow.md
segment_2_langgraph/: 01_complex_graphs.py  02_state_persistence.py  03_code_review_agent.py  04_error_handling.py  05_human_in_loop.py  README.md  __init__.py
segment_2_langgraph/exercises/: add_state_management.py
segment_3_crewai/: 01_specialized_agents.py  02_communication.py  03_software_team_demo.py  04_conflict_resolution.py  05_parallel_execution.py  README.md  __init__.py
segment_3_crewai/exercises/: two_agent_collab.py
segment_4_mcp/: 01_mcp_architecture.py  03_github_integration.py  04_slack_integration.py  05_production_concerns.py  06_evaluation_framework.py  07_antipatterns.py  README.md  __init__.py
segment_4_mcp/02_database_server/: Dockerfile  README.md  server.py
segment_4_mcp/exercises/: architecture_review.md
